fix get all
